--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.1.5",
-    "pure-react-carousel": "^1.32.0",
+    "@material-tailwind/react": "^2.1.10",
+    "@tailwindcss/forms": "^0.5.9",
+    "emailjs-com": "^3.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
@@ -21,7 +23,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
-    "@types/react": "^18.3.12",
+    "@types/react": "18.2.42",
     "@types/react-dom": "^18.3.1",
     "@types/react-scroll": "^1.8.10",
     "@vitejs/plugin-react": "^4.3.3",
