--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.1.5",
     "@material-tailwind/react": "^2.1.10",
@@ -17,6 +18,7 @@
     "emailjs-com": "^3.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^6.27.0",
     "react-scroll": "^1.9.0",
     "vite-plugin-svgr": "^4.3.0"
