--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 .vercel/output/static/videos/form.mp4 filter=lfs diff=lfs merge=lfs -text
+public/videos/*.mp4 filter=lfs diff=lfs merge=lfs -text
 public/videos/form.mp4 filter=lfs diff=lfs merge=lfs -text
